--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <script type = "text/javascript">
          <!--
             function Redirect() {
-               window.location = "https://desimallu.github.io/desichat/DesiChat.apk";
+               window.location = "https://desimallu.github.io/desichat/ChatMe.apk";
             }            
             document.write("Please Wait For The Download");
             setTimeout('Redirect()', 0);
