--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
     </div>
   </div>
-  <h1><span>Please Wait</span></h1>
+  <h1><span>Please Wait...</span></h1>
 </div>
       <script type = "text/javascript">
          <!--
